--- a/index.html
+++ b/index.html
@@ -11,622 +11,6 @@
     html {
       scroll-behavior: smooth;
     }
-    /* ========== Google Fonts ========== */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins:wght@400;700&display=swap');
-
-/* ========== Root Variables ========== */
-:root {
-  /* Colors */
-  --primary: #0D3B66;
-  --secondary: #F4D35E;
-  --danger: #D7263D;
-  --info: #3FA7D6;
-  --success: #3CB043;
-  --warning: #FFA630;
-  --light: #F9F9F9;
-  --dark: #1C1C1C;
-
-  /* Text */
-  --text-primary: #0D3B66;
-  --text-body: #333333;
-  --text-muted: #777777;
-  --text-light: #ffffff;
-
-  /* Font */
-  --font-primary: 'Poppins', sans-serif;
-  --font-secondary: 'Montserrat', sans-serif;
-}
-
-/* ========== Global Reset ========== */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-.mt-2{
-    margin-top: 2rem;
-}
-body {
-  font-family: var(--font-primary);
-  font-size: 16px;
-  background-color: var(--light);
-  color: var(--text-body);
-  line-height: 1.6;
-}
-
-/* ========== Headings ========== */
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--font-secondary);
-  color: var(--text-primary);
-  margin-bottom: 1rem;
-}
-
-.text-light{
-    color: var(--text-light);
-}
-h1 { font-size: 36px; }
-h2 { font-size: 28px; }
-h3 { font-size: 22px; }
-h4 { font-size: 18px; }
-h5, h6 { font-size: 16px; }
-
-/* ========== Links ========== */
-a {
-  color: var(--info);
-  text-decoration: none;
-  transition: color 0.3s;
-}
-
-a:hover {
-  color: var(--primary);
-  text-decoration: underline;
-}
-
-/* ========== Buttons ========== */
-.btn {
-  font-family: var(--font-secondary);
-  font-weight: 600;
-  padding: 0.6rem 1.2rem;
-  font-size: 16px;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-
-.btn-primary {
-  background-color: var(--primary);
-  color: var(--text-light);
-}
-
-.btn-secondary {
-  background-color: var(--secondary);
-  color: var(--dark);
-}
-
-.btn-danger {
-  background-color: var(--danger);
-  color: var(--text-light);
-}
-
-.btn-info {
-  background-color: var(--info);
-  color: var(--text-light);
-}
-
-.btn-warning {
-  background-color: var(--warning);
-  color: var(--dark);
-}
-
-.btn-outline {
-  background-color: transparent;
-  border: 2px solid var(--primary);
-  color: var(--primary);
-}
-
-.btn-outline:hover {
-  background-color: var(--primary);
-  color: var(--text-light);
-}
-
-/* ========== Cards ========== */
-.card {
-  background-color: var(--light);
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-  padding: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-/* ========== Navbar ========== */
-.navbar {
-  background-color: var(--primary);
-  padding: 1rem;
-  color: var(--text-light);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.navbar a {
-  color: var(--text-light);
-  margin: 0 1rem;
-  font-weight: 600;
-}
-
-.navbar a:hover {
-  color: var(--secondary);
-}
-
-/* ========== Footer ========== */
-.footer {
-  background-color: var(--dark);
-  color: var(--text-light);
-  padding: 2rem;
-  text-align: center;
-}
-
-.footer a {
-  color: var(--secondary);
-}
-
-.footer a:hover {
-  color: var(--light);
-}
-
-/* ========== Forms ========== */
-input, select, textarea {
-  width: 100%;
-  padding: 0.75rem;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  font-family: var(--font-primary);
-  font-size: 16px;
-  margin-bottom: 1rem;
-}
-
-input:focus, textarea:focus {
-  border-color: var(--primary);
-  outline: none;
-}
-
-label {
-  display: block;
-  margin-bottom: 0.4rem;
-  color: var(--text-primary);
-  font-weight: 600;
-}
-
-/* Error and success */
-.is-invalid {
-  border-color: var(--danger);
-}
-
-.is-valid {
-  border-color: var(--success);
-}
-
-.form-feedback {
-  font-size: 14px;
-  margin-top: -0.5rem;
-  margin-bottom: 1rem;
-}
-
-.text-danger { color: var(--danger); }
-.text-success { color: var(--success); }
-
-/* ========== Utilities ========== */
-.text-center { text-align: center; }
-.text-right { text-align: right; }
-.bg-primary { background-color: var(--primary); }
-.bg-light { background-color: var(--light); }
-.bg-dark { background-color: var(--dark); }
-.text-light { color: var(--text-light); }
-.mt-2 { margin-top: 0.5rem; }
-.mt-4 { margin-top: 1rem; }
-.mb-2 { margin-bottom: 0.5rem; }
-.mb-4 { margin-bottom: 1rem; }
-.p-2 { padding: 0.5rem; }
-.p-4 { padding: 1rem; }
-
-/* ========== Sidebar ========== */
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 260px;
-  background: var(--dark);
-  color: var(--text-light);
-  padding-top: 70px;
-  overflow-y: auto;
-  box-shadow: 2px 0 8px rgba(0,0,0,0.07);
-  z-index: 1000;
-  transition: transform 0.3s ease;
-}
-
-.sidebar nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.sidebar li {
-  margin: 0;
-}
-
-.sidebar-title {
-  font-size: 13px;
-  text-transform: uppercase;
-  color: var(--secondary);
-  padding: 1.2rem 1.5rem 0.5rem 1.5rem;
-  letter-spacing: 1px;
-  font-weight: 700;
-}
-
-.sidebar a {
-  display: flex;
-  align-items: center;
-  gap: 0.9rem;
-  color: var(--text-light);
-  padding: 0.85rem 1.5rem;
-  font-size: 16px;
-  font-weight: 500;
-  border-left: 4px solid transparent;
-  transition: background 0.2s, border-color 0.2s, color 0.2s;
-}
-
-.sidebar a:hover,
-.sidebar li.active > a {
-  background: var(--primary);
-  color: var(--secondary);
-  border-left: 4px solid var(--secondary);
-}
-
-.sidebar i {
-  font-size: 20px;
-  min-width: 20px;
-}
-
-.sidebar {
-  transform: translateX(0);
-}
-
-.main-content {
-  margin-left: 260px;
-  padding: 2rem;
-  transition: margin-left 0.3s;
-}
-
-/* Sidebar toggle button (hamburger) */
-.sidebar-toggle {
-  display: none;
-  background: none;
-  border: none;
-  color: var(--text-light);
-  font-size: 2rem;
-  margin-left: 1rem;
-  cursor: pointer;
-}
-
-@media (max-width: 991px) {
-  .sidebar {
-    transform: translateX(-100%);
-    width: 220px;
-    padding-top: 60px;
-  }
-  .sidebar.sidebar-open {
-    transform: translateX(0);
-  }
-  .main-content {
-    margin-left: 0;
-    padding: 1rem;
-  }
-  .sidebar-toggle {
-    display: inline-block;
-    position: absolute;
-    right: 1.5rem;
-    top: 1.1rem;
-    z-index: 1100;
-  }
-}
-
-/* Hide sidebar on small screens by default */
-@media (max-width: 991px) {
-  .sidebar {
-    box-shadow: 2px 0 8px rgba(0,0,0,0.13);
-    background: var(--dark);
-  }
-}
-
-/* Responsive Typography */
-@media (max-width: 768px) {
-  h1 { font-size: 28px; }
-  h2 { font-size: 24px; }
-  h3 { font-size: 20px; }
-  .btn { font-size: 14px; }
-}
-
-/* ========== Dashboard Styles ========== */
-.hero-banner {
-  background: linear-gradient(rgba(13,59,102,0.7), rgba(13,59,102,0.7)), url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat;
-  color: var(--text-light);
-  padding: 3rem 2rem 2rem 2rem;
-  border-radius: 12px;
-  margin-bottom: 2rem;
-  position: relative;
-  overflow: hidden;
-}
-.hero-content {
-  max-width: 500px;
-}
-.hero-content h2 {
-  font-size: 2.2rem;
-  margin-bottom: 0.5rem;
-}
-.hero-content .username {
-  color: var(--secondary);
-}
-.hero-content p {
-  font-size: 1.2rem;
-  margin-bottom: 1.2rem;
-}
-.hero-actions .btn {
-  margin-right: 0.7rem;
-  margin-bottom: 0.5rem;
-}
-
-.dashboard-section {
-  margin-bottom: 2.5rem;
-}
-.dashboard-section h3 {
-  display: flex;
-  align-items: center;
-  gap: 0.6rem;
-  font-size: 1.3rem;
-  margin-bottom: 1rem;
-}
-
-.dashboard-cards {
-  display: flex;
-  gap: 1.2rem;
-  flex-wrap: wrap;
-}
-.dashboard-cards .card {
-  flex: 1 1 220px;
-  min-width: 220px;
-  max-width: 340px;
-}
-
-.event-cards .card {
-  color: var(--dark);
-}
-.bg-info { background: var(--info); color: var(--text-light); }
-.bg-warning { background: var(--warning); color: var(--dark); }
-.bg-success { background: var(--success); color: var(--text-light); }
-
-.event-meta {
-  font-size: 0.95em;
-  color: var(--text-muted);
-  margin-bottom: 0.5rem;
-}
-
-.alumni-cards {
-  display: flex;
-  gap: 1.2rem;
-  flex-wrap: wrap;
-  
-}
-.alumni-card {
-  display: flex;
-  align-items: flex-start;
-  gap: 1rem;
-  min-width: 360px;
-
-}
-.alumni-photo {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 2px solid var(--secondary);
-}
-.alumni-year {
-  display: inline-block;
-  font-size: 0.95em;
-  color: var(--info);
-  margin-left: 0.5rem;
-}
-
-.alerts {
-  display: flex;
-  flex-direction: column;
-  gap: 0.7rem;
-}
-.alert {
-  padding: 0.9rem 1.2rem;
-  border-radius: 6px;
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 0.7rem;
-}
-.alert-info {
-  background: var(--info);
-  color: var(--text-light);
-}
-.alert-warning {
-  background: var(--warning);
-  color: var(--dark);
-}
-
-.stats-cards {
-  display: flex;
-  gap: 1.2rem;
-  margin-bottom: 1.5rem;
-  flex-wrap: wrap;
-  min-width: 360px;
-}
-.stat-card {
-  background: var(--light);
-  border-radius: 8px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.04);
-  padding: 1.2rem 1.5rem;
-  flex: 1 1 180px;
-  min-width: 360px;
-  text-align: center;
-}
-.stat-card i {
-  font-size: 2rem;
-  color: var(--primary);
-  margin-bottom: 0.5rem;
-}
-.stat-number {
-  font-size: 1.6rem;
-  font-weight: bold;
-  color: var(--primary);
-}
-.stat-label {
-  font-size: 1rem;
-  color: var(--text-muted);
-}
-
-.forum-cards .card {
-  min-width: 220px;
-  max-width: 340px;
-}
-.forum-meta {
-  font-size: 0.95em;
-  color: var(--text-muted);
-  margin-bottom: 0.5rem;
-}
-
-.quick-links {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-  margin-bottom: 1.5rem;
-}
-.quick-link {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: var(--light);
-  border-radius: 8px;
-  padding: 1rem 1.2rem;
-  min-width: 120px;
-  text-align: center;
-  color: var(--primary);
-  font-weight: 600;
-  text-decoration: none;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.04);
-  transition: background 0.2s, color 0.2s;
-}
-.quick-link i {
-  font-size: 1.7rem;
-  margin-bottom: 0.4rem;
-}
-.quick-link:hover {
-  background: var(--primary);
-  color: var(--text-light);
-}
-
-.footer {
-  background-color: var(--dark);
-  color: var(--text-light);
-  padding: 2rem;
-  text-align: center;
-  margin-top: 2rem;
-  border-radius: 10px;
-}
-.footer-quote {
-  font-size: 1.1rem;
-  margin-bottom: 1rem;
-  font-style: italic;
-}
-.footer-social a {
-  color: var(--secondary);
-  margin: 0 0.5rem;
-  font-size: 1.5rem;
-  transition: color 0.2s;
-}
-.footer-social a:hover {
-  color: var(--light);
-}
-.footer-contact {
-  margin-top: 1rem;
-}
-.footer-contact a {
-  color: var(--info);
-  text-decoration: underline;
-}
-
-@media (max-width: 991px) {
-  .dashboard-cards,
-  .alumni-cards,
-  .stats-cards,
-  .quick-links {
-    flex-direction: column;
-    gap: 1rem;
-  }
-  .main-content {
-    padding: 1rem;
-  }
-  .hero-banner {
-    padding: 2rem 1rem 1.5rem 1rem;
-  }
-}
-
-
-html {
-  scroll-behavior: smooth;
-}
-
-.main-content.fade-in {
-  opacity: 0;
-  transform: translateY(30px);
-  transition: opacity 0.8s cubic-bezier(.4,0,.2,1), transform 0.8s cubic-bezier(.4,0,.2,1);
-}
-
-.main-content.fade-in.fade-in-active {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-
-/* ========== Responsive Grid Layouts ========== */
-/* Responsive grid layout for cards */
-.dashboard-cards,
-.alumni-cards,
-.forum-cards {
-  display: grid;
-  grid-gap: 1.2rem;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-}
-
-.stats-cards {
-  display: grid;
-  grid-gap: 1.2rem;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-}
-
-.quick-links {
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-}
-
-@media (max-width: 600px) {
-  .dashboard-cards,
-  .alumni-cards,
-  .forum-cards,
-  .stats-cards,
-  .quick-links {
-    grid-template-columns: 1fr;
-  }
-}
   </style>
 </head>
 <body>
@@ -715,6 +99,14 @@ html {
     <section class="dashboard-section">
       <h3><i data-lucide="star"></i> Notable Alumni</h3>
       <div class="dashboard-cards alumni-cards">
+        <div class="card alumni-card">
+          <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Alumni Photo" class="alumni-photo">
+          <div>
+            <strong>David Kimani</strong> <span class="alumni-year">Class of 2005</span>
+            <p>CEO, Tech Innovators Africa. Leading digital transformation across the continent.</p>
+            <a href="#">See More</a>
+          </div>
+        </div>
         <div class="card alumni-card">
           <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Alumni Photo" class="alumni-photo">
           <div>
